--- a/DSATests/DSATests.csproj
+++ b/DSATests/DSATests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\DataStructurePractice\DataStructures\DSA.csproj" />
+    <ProjectReference Include="..\DSA\DSA.csproj" />
   </ItemGroup>
 
 </Project>
